# um-mchk

./: README.md  dune-project  notes.org  um-mchk.opam
lib/: action.ml
um_mchk/lib/: checker.ml  dune  spec.ml  state.ml  vending_machine.ml
um_mchk/test/: dune  um_mchk.ml
